# duckdb-engine

./: .gitmodules  CMakeLists.txt  README.md  build.sh  cross_engine_scan.cc  ddl_convertor.cc  ddl_convertor.h  delta_appender.cc  delta_appender.h  dml_convertor.cc  dml_convertor.h  duckdb.cnf  duckdb_charset_collation.cc  duckdb_charset_collation.h  duckdb_config.cc  duckdb_config.h  duckdb_context.cc  duckdb_context.h  duckdb_error.h  duckdb_include  duckdb_log.cc  duckdb_log.h  duckdb_manager.cc  duckdb_manager.h  duckdb_mysql_compat.cc  duckdb_query.cc  duckdb_query.h  duckdb_select.cc  duckdb_select.h  duckdb_table.cc  duckdb_table.h  duckdb_timezone.cc  duckdb_timezone.h  duckdb_types.cc  duckdb_types.h  duckdb_udf.cc  ha_duckdb.cc  ha_duckdb.h  ha_duckdb_pushdown.cc  ha_duckdb_pushdown.h  (+3 more)
cmake/: duckdb.cmake  duckdb_errors.cmake  duckdb_extensions.cmake  gen_duckdb_error_h.cmake
debian/: mariadb-plugin-duckdb.install
docs/: disabled-tests-plan.md  mariadb-duckdb-incompatibilities.md
mysql-test/duckdb/: disabled.def  my.cnf  suite.opt
mysql-test/duckdb/include/: alter_duckdb_column.inc  alter_duckdb_index.inc  check_field_correctness.inc  cleanup_duckdb.inc  have_duckdb.inc  transaction_basic.inc
mysql-test/duckdb/r/: alter_duckdb_column.result  alter_duckdb_column_copy.result  charset_and_collation.result  create_table_column.result  create_table_constraint.result  cross_engine_join.result  cross_engine_union.result  decimal_high_precision.result  dml_delete.result  drop_database.result  duckdb_collate.result  duckdb_monitor.result  duckdb_require_primary_key.result  duckdb_string_func.result  transaction.result  truncate_and_maintenance_duckdb_table.result
mysql-test/duckdb/t/: alter_default_debug.test  alter_duckdb_column.test  dml_delete.test  (+20 more)
patches/: 0001-octet_length-varchar.patch
